Add timeout for image operations
Currently image operations inherit the timeout from compute as that is
set in the base restclient.

This patch adds a seperate configuration option for image operations.

--- a/etc/tempest.conf.sample
+++ b/etc/tempest.conf.sample
@@ -650,6 +650,9 @@
 # the first found one is used. (string value)
 #region =
 
+# Timeout in seconds to wait for an image operation to complete.
+#build_timeout = 300
+
 
 [image-feature-enabled]
 
